--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,25 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=Pacifico');
+@import url('https://fonts.googleapis.com/css?family=Oswald');
+
+.logo {
+  padding: 5px;
+}
+
+.header {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  height: 220px;
+}
 
 .navContainer {
   flex: 1;
   display: flex;
   flex-direction: column;
-  font-family: Pacifico;
-}
-
-.navHeader {
-  font-size: 150%;
-  flex: 0.5;
-  margin: 0px;
-  padding: 0px;
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .topicsContainer {
-  flex: 6;
   overflow: scroll;
   display: flex;
   flex-direction: column;
@@ -41,10 +39,13 @@
 button {
   border: 0px;
   font-size: 150%;
-  font-family: Pacifico;
+  font-family: Oswald;
 }
 button:focus {
   outline: 0px;
+}
+button:hover {
+  font-size: 160%;
 }
 
 #selected {
