--- a/src/styles/ArticleContent.css
+++ b/src/styles/ArticleContent.css
@@ -1,28 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif+TC');
+@import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
 
 .articleContent {
   flex: 3;
   display: flex;
   flex-direction: column;
-  font-family: 'Noto Serif TC', sans-serif;
-  border: solid red 1px;
+  font-family: Major Mono Display;
 }
 
 .articleHeader {
-  font-family: 'Noto Serif TC', sans-serif;
+  font-weight: bold;
   text-decoration: underline;
+  width: 100%;
+  flex: 4;
+  display: flex;
 }
 .author {
+  padding-top: 10px;
   font-style: italic;
+  flex: 1;
 }
 .articleTop {
   display: flex;
   align-items: center;
-}
-.articleData {
-  display: flex;
+  flex-direction: column;
+  flex: 2;
 }
 
 .articleBody {
   font-size: 80%;
+  flex: 6;
+}
+
+.articleData {
+  display: flex;
+  flex: 0.5;
 }
