--- a/src/styles/ArticleComments.css
+++ b/src/styles/ArticleComments.css
@@ -1,5 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif+TC');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
+.show,
+.hide {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  transition: 0.5s;
+}
+
+.hidden {
+  flex: 1;
+  opacity: 0;
+}
 .commentsContainer {
   flex: 1;
   display: flex;
@@ -8,6 +20,7 @@
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
+  font-family: Roboto;
 }
 
 .commentContainer {
@@ -15,16 +28,17 @@
   height: 130px;
   margin-right: 5px;
   overflow: scroll;
-  font-family: 'Noto Serif TC', sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-size: 75%;
+  border-left: solid black 1px;
+  padding-left: 5px;
 }
 .commentBody {
   font-style: italic;
   overflow: scroll;
-  font-size: 90%;
+  font-size: 110%;
   flex: 5;
 }
 
@@ -35,12 +49,13 @@
 }
 
 .deleteCommentButton {
-  border-radius: 50%;
-  width: 20px;
+  font-size: 80%;
+  width: 40px;
   height: 20px;
   background-color: lightcoral;
   padding: 0px;
   margin: 0px;
+  font-family: Roboto;
 }
 .deleteCommentContainer {
   display: flex;
