--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 .logo {
   padding: 5px;
