--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 .moreArticles {
   height: 200px;
   width: 200px;
@@ -30,4 +32,40 @@
 }
 .arrow {
   display: none;
+}
+
+.voter {
+  font-family: Roboto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  margin: 5px;
+}
+.voteContainer,
+.vote {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-style: none;
+  padding: 3px;
+}
+.voteButton {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  padding: 0px;
+  background-color: lightcoral;
+}
+
+.inner {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
