--- a/src/styles/ArticleDisplay.css
+++ b/src/styles/ArticleDisplay.css
@@ -1,5 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 .articleDisplay {
   display: flex;
   flex-direction: column;
   flex: 4;
+}
+
+.nothingHere {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.nothingHereMessage {
+  font-family: Roboto;
 }
