--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -13,6 +13,7 @@
 .formInner {
   display: flex;
   flex: 1;
+  flex-direction: row;
 }
 
 .formEl {
@@ -24,7 +25,6 @@
   flex: 6;
 }
 .commentField {
-  flex: 1;
   width: 99%;
   height: 90%;
   border: 0px;
@@ -49,6 +49,7 @@
 .formOuter {
   flex: 3;
   display: flex;
+  flex-direction: row;
 }
 
 .submitButton {
@@ -85,9 +86,25 @@
 
 .flash {
   animation-name: flash;
+  animation-iteration-count: infinite;
   animation-duration: 1s;
 }
 
 .submitCont {
   flex: 1;
+}
+
+.postLoader {
+  animation-name: loading;
+  animation-iteration-count: infinite;
+  animation-duration: 2s;
+}
+
+@keyframes loading {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+    border-top: solid black 2px;
+    border-bottom: solid black 2px;
+  }
 }
