--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -17,7 +17,16 @@
   display: flex;
   flex-direction: column;
 }
-
+.topicHead {
+  height: 50px;
+  display: flex;
+  font-family: Major Mono Display;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  color: lightcoral;
+  background-color: black;
+}
 .topicsContainer {
   overflow: scroll;
   display: flex;
