--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -44,18 +44,24 @@
 .inner {
   height: 100%;
   width: 100%;
+  font-size: 100%;
+  font-weight: 900;
 }
 
-button {
+button,
+select,
+input {
   border: 0px;
-  font-size: 150%;
   font-family: Major Mono Display;
-  font-weight: bold;
 }
-button:focus {
+button:focus,
+select:focus,
+input:focus {
   outline: 0px;
 }
-button:hover {
+button:hover,
+select:hover,
+input:hover {
   background-color: lightcoral;
 }
 
