homepage put in, main logo links to it

--- a/src/styles/ArticleComments.css
+++ b/src/styles/ArticleComments.css
@@ -35,6 +35,7 @@
   width: 22%;
   height: 130px;
   margin-right: 5px;
+  margin-top: 5px;
   overflow: scroll;
   display: flex;
   flex-direction: column;
