--- a/src/styles/TopTen.css
+++ b/src/styles/TopTen.css
@@ -36,16 +36,41 @@
   flex: 1;
   font-family: Major Mono Display;
   font-weight: 900;
+  width: 100%;
 }
 
 .titleTenInner {
   display: flex;
+  text-align: center;
+  align-items: center;
+  background-color: lightcoral;
+  width: 100%;
+  height: 50px;
+}
+
+.itemNumberCont {
+  flex: 1;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.itemTitle {
+  flex: 6;
+}
+
+.itemTitle:hover {
+  text-decoration: underline;
+}
+.itemNumber {
+  text-align: center;
+  border-radius: 50%;
   background-color: lightcoral;
-  margin: 3px;
-  border-radius: 15%;
-  width: 80px;
-  height: 80px;
+  width: 20px;
+  height: 20px;
+}
+
+.trendIcon {
+  padding-right: 5px;
 }
