--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -18,36 +18,33 @@
 }
 
 .newLink {
-  width: 90px;
-  height: 90px;
+  width: 100%;
+  height: 50px;
   background-color: #f08080;
-  border-radius: 50%;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   text-align: center;
-  flex-direction: column;
   font-weight: 900;
   transition: 0.5s;
   font-size: 90%;
 }
 .newLink:hover {
-  animation-name: wiggle-rotation;
-  animation-iteration-count: 5;
-  animation-duration: 1s;
+  font-size: 100%;
 }
 
-@keyframes wiggle-rotation {
-  100% {
-    -webkit-transform: rotate(5deg);
-    transform: rotate(5deg);
-  }
+.linkText {
+  flex: 4;
+}
+
+.linkIcon {
+  flex: 1;
 }
 
 .welcomeContainer {
   flex: 0.2;
   text-align: center;
   font-weight: bold;
-  border-bottom: solid black 1px;
   margin: 5px;
 }
 .plus {
