--- a/src/styles/controller.css
+++ b/src/styles/controller.css
@@ -32,6 +32,7 @@
   width: 100%;
   font-size: 100%;
   font-family: Major Mono Display;
+  font-weight: 900;
 }
 .selectContainer,
 .submitContainer {
